--- a/notebooks/unit2/unit2.ipynb
+++ b/notebooks/unit2/unit2.ipynb
@@ -213,6 +213,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip3 install pickle"
+      ],
+      "metadata": {
+        "id": "FPQ9lAwuTZyg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!sudo apt-get update\n",
         "!sudo apt-get install -y python3-opengl\n",
         "!apt install ffmpeg xvfb\n",
@@ -289,7 +300,7 @@
         "import os\n",
         "import tqdm\n",
         "\n",
-        "import pickle5 as pickle\n",
+        "# import pickle5 as pickle\n",
         "from tqdm.notebook import tqdm"
       ]
     },
@@ -361,7 +372,7 @@
       "outputs": [],
       "source": [
         "# Create the FrozenLake-v1 environment using 4x4 map and non-slippery version and render_mode=\"rgb_array\"\n",
-        "env = gym.make() # TODO use the correct parameters"
+        "env = gym.make('FrozenLake-v1', map_name=\"4x4\", is_slippery=False, render_mode='rgb_array') # TODO use the correct parameters"
       ]
     },
     {
@@ -494,10 +505,10 @@
       },
       "outputs": [],
       "source": [
-        "state_space =\n",
+        "state_space = env.observation_space.n\n",
         "print(\"There are \", state_space, \" possible states\")\n",
         "\n",
-        "action_space =\n",
+        "action_space = env.action_space.n\n",
         "print(\"There are \", action_space, \" possible actions\")"
       ]
     },
@@ -511,7 +522,7 @@
       "source": [
         "# Let's create our Qtable of size (state_space, action_space) and initialized each values at 0 using np.zeros. np.zeros needs a tuple (a,b)\n",
         "def initialize_q_table(state_space, action_space):\n",
-        "  Qtable =\n",
+        "  Qtable = np.zeros((state_space, action_space))\n",
         "  return Qtable"
       ]
     },
@@ -603,7 +614,7 @@
       "source": [
         "def greedy_policy(Qtable, state):\n",
         "  # Exploitation: take the action with the highest state, action value\n",
-        "  action =\n",
+        "  action = np.argmax(Qtable[state][:])\n",
         "\n",
         "  return action"
       ]
@@ -663,15 +674,15 @@
       "source": [
         "def epsilon_greedy_policy(Qtable, state, epsilon):\n",
         "  # Randomly generate a number between 0 and 1\n",
-        "  random_num =\n",
+        "  random_num = random.uniform(0, 1)\n",
         "  # if random_num > greater than epsilon --> exploitation\n",
         "  if random_num > epsilon:\n",
         "    # Take the action with the highest value given a state\n",
         "    # np.argmax can be useful here\n",
-        "    action =\n",
+        "    action = np.argmax(Qtable[state][:])\n",
         "  # else --> exploration\n",
         "  else:\n",
-        "    action = # Take a random action\n",
+        "    action = env.action_space.sample() # Take a random action\n",
         "\n",
         "  return action"
       ]
@@ -797,14 +808,14 @@
         "    # repeat\n",
         "    for step in range(max_steps):\n",
         "      # Choose the action At using epsilon greedy policy\n",
-        "      action =\n",
+        "      action = epsilon_greedy_policy(Qtable, state, epsilon)\n",
         "\n",
         "      # Take action At and observe Rt+1 and St+1\n",
         "      # Take the action (a) and observe the outcome state(s') and reward (r)\n",
-        "      new_state, reward, terminated, truncated, info =\n",
+        "      new_state, reward, terminated, truncated, info = env.step(action)\n",
         "\n",
         "      # Update Q(s,a):= Q(s,a) + lr [R(s,a) + gamma * max Q(s',a') - Q(s,a)]\n",
-        "      Qtable[state][action] =\n",
+        "      Qtable[state][action] = Qtable[state][action] + learning_rate * (reward + gamma * np.max(Qtable[new_state]) - Qtable[state][action])\n",
         "\n",
         "      # If terminated or truncated finish the episode\n",
         "      if terminated or truncated:\n",
@@ -1757,16 +1768,17 @@
         "Pnpk2ePoem3r"
       ],
       "toc_visible": true,
+      "gpuType": "T4",
       "include_colab_link": true
     },
-    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
