--- a/notebooks/unit5/unit5.ipynb
+++ b/notebooks/unit5/unit5.ipynb
@@ -600,7 +600,7 @@
       },
       "outputs": [],
       "source": [
-        "!mlagents-push-to-hf  --run-id= # Add your run id  --local-dir= # Your local dir  --repo-id= # Your repo id  --commit-message= # Your commit message"
+        "!mlagents-push-to-hf  --run-id=\"SnowballTarget1\"  --local-dir=\"./results/SnowballTarget1/\"  --repo-id=\"srishtibagchi/ppo-SnowballTarget\"  --commit-message=\"first commit\""
       ]
     },
     {
@@ -812,7 +812,7 @@
       },
       "outputs": [],
       "source": [
-        "!mlagents-push-to-hf  --run-id= # Add your run id  --local-dir= # Your local dir  --repo-id= # Your repo id  --commit-message= # Your commit message"
+        "!mlagents-push-to-hf  --run-id=\"Pyramids Training\"  --local-dir=\"./results/Pyramids Training\"  --repo-id=\"srishtibagchi/ppo-PyramidsRND\"  --commit-message=\"first commit\""
       ]
     },
     {
