--- a/notebooks/unit6/unit6.ipynb
+++ b/notebooks/unit6/unit6.ipynb
@@ -669,11 +669,11 @@
         "\n",
         "package_to_hub(\n",
         "    model=model,\n",
-        "    model_name=f\"a2c-{env_id}\",\n",
+        "    model_name=f\"a2c-PandaReachDense-v3\",\n",
         "    model_architecture=\"A2C\",\n",
         "    env_id=env_id,\n",
         "    eval_env=eval_env,\n",
-        "    repo_id=f\"ThomasSimonini/a2c-{env_id}\", # Change the username\n",
+        "    repo_id=f\"srishtibagchi/a2c-PandaReachDense-v3\", # Change the username\n",
         "    commit_message=\"Initial commit\",\n",
         ")"
       ],
